# GPBR

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  GPBR.cpp  GPBR.h  LICENSE.txt  README.md
cmake/: CompileSpirvShader.cmake  CopyAssets.cmake  CopyRuntimeDLLs.cmake  CopyRuntimeResources.cmake  ShaderHelpers.cmake
gpbr/: CMakeLists.txt
gpbr/assets/: Cube.glb  Duck2.glb  Sphere.glb  Suzanne.glb  debug_notes.txt  licenses.txt
gpbr/include/gpbr/: CMakeLists.txt
gpbr/include/gpbr/Graphics/: camera.h  light.h
gpbr/include/gpbr/Graphics/Vulkan/: vk_descriptors.h  vk_engine.h  vk_images.h  vk_initializers.h  vk_loader.h  vk_pipelines.h  vk_types.h  volk_impl.h
gpbr/include/gpbr/Util/: imgui_util.h
gpbr/src/: main.cpp
gpbr/src/Graphics/: camera.cpp
gpbr/src/Graphics/Vulkan/: vk_descriptors.cpp  vk_engine.cpp  vk_images.cpp  vk_initializers.cpp  vk_loader.cpp  vk_pipelines.cpp
gpbr/src/Shaders/: blinn_phong.glsl  colored_triangle.frag  colored_triangle_mesh.vert  compile.bat  gradient.comp  gradient_comp.spv  input_structures.glsl  mesh.frag  mesh.vert  mesh_mask.frag  mesh_pbr.frag  mesh_pbr_mask.frag  pbr.glsl  sky.comp  tex_image.frag
gpbr/src/Util/: imgui_util.cpp
